# animal_behavior_detection

./: README.md  pyproject.toml
checkpoints/: cbfl_model.pth  none_model.pth  weighted_samp_model.pth
doc/: technical_report.adoc
docs/: transformer-diagram
src/animal_behavior_detection/: class-imbalance.py  class_imbalance.py  data_seq_aug_mars.py  plot_data_stats.py  transformer.py
